force-app/main/default/objects/Form__c/Form__c.object-meta.xml
<CustomObject>
    <description>Demo/dummy object representing a quality form (e.g., Pre-Op, Post-Op). The PDF generator must be object-agnostic; Form__c exists so the builder has realistic data to work against.</description>
    <label>Form</label>
    <nameField>
        <label>Form Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>