force-app/main/default/objects/Form__c/fields/Patient_Name__c.field-meta.xml
<CustomField>
    <fullName>Patient_Name__c</fullName>
    <label>Patient Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>