force-app/main/default/objects/Form__c/fields/Procedure_Date__c.field-meta.xml
<CustomField>
    <fullName>Procedure_Date__c</fullName>
    <label>Procedure Date</label>
    <type>Date</type>
</CustomField>