force-app/main/default/objects/Form__c/fields/Revision_Number__c.field-meta.xml
<CustomField>
    <fullName>Revision_Number__c</fullName>
    <description>Revision of the underlying quality form template (e.g., 1, 2, 3). Used by Template_Mapping__c rules to pick the correct Template_Version__c.</description>
    <label>Revision Number</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>