force-app/main/default/objects/Form__c/recordTypes/Post_Op.recordType-meta.xml
<RecordType>
    <fullName>Post_Op</fullName>
    <active>true</active>
    <description>Post-operative form variant.</description>
    <label>Post-Op</label>
</RecordType>