force-app/main/default/objects/Form__c/recordTypes/Pre_Op.recordType-meta.xml
<RecordType>
    <fullName>Pre_Op</fullName>
    <active>true</active>
    <description>Pre-operative form variant.</description>
    <label>Pre-Op</label>
</RecordType>