force-app/main/default/objects/Form__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Patient_Name__c</columns>
    <columns>Procedure_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Revision_Number__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>